--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -54,6 +54,6 @@ jobs:
             git fetch --all &&
             git reset --hard origin/main &&
             # bundle install &&
-            systemctl restart myapp
+            sudo systemctl restart myapp
             '
             
