--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -29,7 +29,7 @@ jobs:
       run: bundle exec rubocop
   
   deploy:
-    # needs: test_lint
+    needs: test_lint
 
     runs-on: ubuntu-latest
 
@@ -47,9 +47,6 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
           export PATH="$HOME/.rbenv/bin:$PATH"
           eval "$(rbenv init -)"
-          # Check rbenv status and bundle command location
-          echo "rbenv version: $(rbenv version)"
-          echo "bundle location: $(which bundle)"
           cd /home/***/RealWorld &&
           # Fetch latest repository and restart RealWorld
           git fetch --all &&
